deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: exg
  labels:
    app.kubernetes.io/part-of: exg
