deploy/k8s/exg-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: exg-server
  namespace: exg
  labels:
    app: exg-server
spec:
  type: ClusterIP
  selector:
    app: exg-server
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: ws
      port: 8081
      targetPort: ws
    - name: metrics
      port: 9000
      targetPort: metrics
